fixed weird movement and removed scrollbar

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -15,9 +15,9 @@ html {
   // overflow-y: auto;
 }
 
-body {
+html {
   // overflow: hidden;
-  // overflow-y: auto;
+  overflow-y: auto;
 }
 
 // Theme
@@ -49,23 +49,23 @@ body {
 }
 
 // Scrollbar
-::-webkit-scrollbar {
-  width: 14px;
-}
+// ::-webkit-scrollbar {
+//   width: 10px;
+// }
 
-::-webkit-scrollbar-track {
-  background: rgba(var(--background-color-rgb), 0.5) !important;
-  border-radius: 15px;
-}
+// ::-webkit-scrollbar-track {
+//   background: rgba(var(--background-color-rgb), 0.5) !important;
+//   border-radius: 15px;
+// }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(var(--secondary-rgb), 0.7) !important;
-  border-radius: 15px;
-}
+// ::-webkit-scrollbar-thumb {
+//   background: rgba(var(--secondary-rgb), 0.7) !important;
+//   border-radius: 15px;
+// }
 
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(var(--secondary-rgb), 0.5) !important;
-}
+// ::-webkit-scrollbar-thumb:hover {
+//   background: rgba(var(--secondary-rgb), 0.5) !important;
+// }
 
 // Buefy/Bulma overrides
 
